[package]
name = "cppm-generator"
description = "Generates charged patchy particles by Monte Carlo sampling on a sphere"
version = "0.2.0"
edition = "2021"
authors = ["Mikael Lund <lyssky@icloud.com>"]
homepage = "https://github.com/mlund/cppm-generator"
repository = "https://github.com/mlund/cppm-generator"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bio-colloids", "biophysics", "patchy-particles", "monte-carlo", "multipoles"]
categories = ["command-line-utilities"]

[[bin]]
name = "cppm-generator"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "3.1.8", features = ["derive"] }
nalgebra = "0.30.1"
num-traits = "0.2"
average = "0.13.1"
itertools = "0.10.3"
approx = "0.5.1"
indicatif = "0.16.2"
derive_builder = "0.11.2"


