[package]
name = "cppm-generator"
description = "Generates charged patchy particles by Monte Carlo sampling on a sphere"
version = "0.2.0"
edition = "2021"
authors = ["Mikael Lund <lyssky@icloud.com>"]
homepage = "https://github.com/mlund/cppm-generator"
repository = "https://github.com/mlund/cppm-generator"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bio-colloids", "biophysics", "patchy-particles", "monte-carlo", "multipoles"]
categories = ["command-line-utilities"]

[[bin]]
name = "cppm-generator"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
clap = { version = "4.1", features = ["derive"] }
nalgebra = "0.32"
num-traits = "0.2"
average = "0.14"
itertools = "0.12"
approx = "0.5"
indicatif = "0.17"
derive_builder = "0.12"
